Refactor ExerciseServiceImplTest class